services/medage/k8s/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: medage
spec:
  hosts:
    - "ui.mapapp.local"
  gateways:
    - ui-gateway
  http:
    - match:
        - uri:
            exact: /api/medage
      route:
        - destination:
            host: medage
            port:
              number: 8080
